--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,20 @@ export(amh)
 export(gcq)
 export(mhq)
 import(BSgenome)
-import(Biostrings)
-import(GenomicRanges)
 import(dplyr)
-import(readr)
-import(stats)
 import(stringi)
 import(stringr)
 import(tidyverse)
 import(utils)
+importFrom(Biostrings,DNAString)
+importFrom(Biostrings,countPattern)
+importFrom(Biostrings,getSeq)
+importFrom(Biostrings,letterFrequency)
+importFrom(Biostrings,matchPattern)
+importFrom(Biostrings,reverseComplement)
+importFrom(Biostrings,subseq)
+importFrom(readr,read_tsv)
+importFrom(stats,chisq.test)
+importFrom(stringi,stri_locate_all)
+importFrom(stringi,stri_sub)
+importFrom(utils,read.delim)
